backend/internal/architecture/testdata/invalid/internal/modules/nestedshape/internal/domain/api.go
package domain

// Query must not satisfy the module-root api.go requirement.
type Query struct{}
